_embed/templates/theme-default/stylesheet/01-layout.css
/******************************************
 * PAGE LAYOUT CLASSES
 ******************************************/

* {
	box-sizing: border-box;
}

body {
	display:flex;
	flex-direction:column;
	background-color: var(--body-background);
	color: var(--text-color);
	margin:0px;
	min-height:100dvh;
}

nav {
	display: flex;
	align-items:stretch;
	justify-content: center;

	color: var(--gray80);
	font-weight:400;
	font-size:14px;
	background-color: var(--white);
	height:48px;
	flex-shrink:0;
	flex-grow:0;
	padding-left:16px;
	padding-right:16px;
	overflow-x:auto;
	overflow-y:hidden;
	overscroll-behavior: none;

	@media print {
		display:none;
	}

	@media screen {

		@media (width < 640px) {
		}

		@media (width >= 640px) {
			& {border-bottom: solid 1px var(--gray15);}
		}
	}

	.framed {
		display: flex;
		justify-content: space-evenly;

		@media screen and (width >= 640px) {
			& {
				flex-grow:1;
				justify-content: center;
			}			
		}
	}

	.spacer {
		display:none;
	}

	a, button {
		display:flex;
		flex-direction:column;
		align-items:center;

		color: var(--gray80);
		background-color: var(--white);
		padding:6px 12px;
		line-height:1.5em;
		border-radius: var(--border-radius);
		margin:6px 0px;
		white-space: nowrap;
		text-overflow: ellipsis;

		&:hover,
		&:focus {
			color: var(--gray90);
			background-color:var(--gray10);
		}

		&.selected,
		&.selected:hover,
		&.selected:focus {
			background-color: var(--gray20);
			color: var(--black);
		}

		& > .icon {
			font-size:24px;
		}

		& > .label {
			font-size:10px;
			line-height:14px;
		}
	}

	b {
		display:inline-block;
		color: var(--black);
		font-weight: 700;
		padding: 8px 0px;
		margin:10px 10px 10px 0px;
		white-space: nowrap;
		text-overflow: ellipsis;
	}

}

main {
	flex-grow:1;
	display: flex;
	flex-direction:row;
	justify-content: center;
	container-type:inline-size;
	overscroll-behavior: none;
}

body:has(> main > .app) {
	height:100dvh;
	width:100dvw;
	overflow-x:hidden;
	overflow-y:hidden;
	overscroll-behavior: none;
}

main:has(> .app) {
	height:100%;
	overflow-x:hidden;
	overflow-y:hidden;
	overscroll-behavior:none;
}

@media screen and (width >= 640px) {

	nav a {
		display:inline;
	}

	nav a > .icon {
		display:unset;
		font-size:unset;
	}
	
	nav a > .label {
		font-size:unset;
		line-height:unset;
	}

	nav .spacer {
		display:unset;
		flex-grow:1;
	}
}

